# SwigTemplate

./: CMakeLists.txt  CMakePresets.json  README.md
ConsoleApp2/: ConsoleApp2.csproj  Program.cs
ConsoleApp2/Properties/: AssemblyInfo.cs
ConsoleApp3/: ConsoleApp3.csproj  Program.cs
ConsoleApp3/Properties/: AssemblyInfo.cs
SourceCodeProject/: source_code.cpp
SwigInterface/: service_interface.i
